actually fixed width on mobile

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -40,8 +40,8 @@ html {
 }
 
 body {
-	width: 36em;
-	max-width: 100%;
+	max-width: 36em;
+	width: 100%;
 	margin: 0 auto;
 	padding: 0 10px;
 }
